--- a/III Projekt.csproj
+++ b/III Projekt.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Genetic.cs" />
     <Compile Include="Graph.cs" />
+    <Compile Include="Individual.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stack.cs" />
